Add test to CinemaTest class